<resources>
    <string name="app_name">My Fitness Tracker</string>
    <string name="view_progress">View Progress</string>
    <string name="sport_progress">Sport Progress</string>
    <string name="workouts_this_month">Workouts This Month:</string>
    <string name="total_workouts">Total Workouts:</string>
    <string name="workouts_this_week">Workouts This Week:</string>
    <string name="workouts_this_year">Workouts This Year:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_password">Change Password</string>
    <string name="profile_picture">profile picture</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="total_sport_workouts">Total %1$s Workouts:</string>
    <string name="weekly_sport_workouts">%1$s Workouts This Week:</string>
    <string name="monthly_sport_workouts">%1$s Workouts This Month:</string>
    <string name="yearly_sport_workouts">%1$s Workouts This Year:</string>
    <string name="total_distance_reps">Total %1$s Distance/Reps:</string>
    <string name="weekly_distance_reps">%1$s Distance/Reps This Week:</string>
    <string name="monthly_distance_reps">%1$s Distance/Reps This Month:</string>
    <string name="yearly_distance_reps">%1$s Distance/Reps This Year:</string>
    <string name="distance_meters_or_reps">Distance (meters) or Reps</string>
    <string name="no_date_selected">No date selected</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_date">Select Date</string>
    <string name="confirm_workout">Confirm Workout</string>
    <string name="added_workouts">Added Workouts:</string>
    <string name="add_a_goal">Add a Goal</string>
    <string name="add_a_workout">Add a Workout</string>
    <string name="squat_counter">Squat Counter</string>
    <string name="squats_0">Squats: 0</string>
    <string name="start_squats">Start Squats</string>
    <string name="stop_squats">Stop Squats</string>
    <string name="large_image_preview">Large Image Preview</string>
    <string name="goal">Goal</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="workout">Workout</string>
    <string name="delete_workout">Delete Workout</string>
    <string name="selected_date">Selected Date:</string>
    <string name="pull_up_counter">Pullup Counter</string>
    <string name="push_up_counter">Pushup Counter</string>
    <string name="walk_counter">Walk Counter</string>
    <string name="run_counter">Run Counter</string>
    <string-array name="sports_array">
        <item>Run</item>
        <item>Walk</item>
        <item>Squat</item>
        <item>Pushup</item>
        <item>Pullup</item>
    </string-array>
</resources>
